# mcpx-rust

./: Cargo.toml  README.md
src/: config.rs  main.rs
